src/index.css
:root {
  /* primary colors */
  --blue950: hsl(213, 96%, 18%);
  --purple600: hsl(243, 100%, 62%);
  --blue300: hsl(228, 100%, 84%);
  --blue200: hsl(206, 94%, 87%);
  --red500: hsl(354, 84%, 57%);

  /* nautral colors */
  --grey500: hsl(231, 11%, 63%);
  --purple200: hsl(229, 24%, 87%);
  --blue100: hsl(218, 100%, 97%);
  --blue50: hsl(231, 100%, 99%);
  --white: hsl(0, 100%, 100%);

  /* fonts */
  --ff-ububtu: "Ubuntu", sans-serif;
  --fs-400: 1rem;
}

/* ------------------- */
/* Reset               */
/* ------------------- */
/* Box sizing */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Reset margins */
body,
h1,
h2,
h3,
h4,
h5,
p,
figure,
picture {
  margin: 0; 
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  font-weight: 400;
}

/* set up the body */
body {
  font-family: var(--ff-ububtu);
  font-size: var(--fs-400);
  color: var(--blue950);
  background-color: var(--blue100);
  line-height: 1.5;
  min-height: 100vh;
}

/* make images easier to work with */
img,
picutre {
  max-width: 100%;
  display: block;
}

/* make form elements easier to work with */
input,
button,
textarea,
select {
  font: inherit;
}

button {
  border: none;
  background-color: transparent;
}

input {
  border: solid 1px var(--grey500)
}

/* ------------------- */
/* Components          */
/* ------------------- */
.stepButton {
  color: var(--white);
  height: 3em;
  aspect-ratio: 1;
  border: solid 2px var(--white);
  border-radius: 50%;
  margin-top: 3rem;
  font-weight: 500;
  cursor: pointer;
}

.stepButton.active {
  color: var(--blue950);
  background-color: var(--blue200);
}

.navigationSteps {
  display: flex;
  justify-content: center;
  gap: 1rem;
  min-height: 240px;
  background-image: url(../public/images/bg-sidebar-mobile.svg);
  background-size: contain;
  background-position: top center;
  background-repeat: no-repeat;
}

.nextButton {
  background-color: var(--blue950);
  color: var(--blue100);
  border-radius: .25rem;
  padding: 1rem;
  float: right;
  margin: 1rem 2rem;
  cursor: pointer;
}

.errorMessage {
  float: right;
  color: var(--red500)
}

.inputError {
  border: 1px solid red;
}

/* ------------------- */
/* Layouts             */
/* ------------------- */
.personalInfo {
  position: relative;
  top: -7.5rem;
  max-width: 490px;
  width: 90%;
  margin: 0 auto;
  padding: 2.5rem 1.5rem;
  border-radius: 1rem;
  background-color: var(--white);
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.personalInfo h1 {
  font-weight: 700;
}

.personalInfo p {
  color: var(--grey500);
  font-size: 1.125rem;
  margin-bottom: 1rem;
}

.formInputFields {
  display: flex;
  flex-direction: column;
}

.personalInfo form input {
  margin-bottom: 1rem;
  line-height: 2rem;
  padding: .5rem 1rem;
  border-radius: 0.25rem;
}

.personalInfo form input:focus {
  border: var(--blue950);
}

.next-button-container {
  background-color: var(--white);
  width: 100%;
  overflow: hidden;
}

.b {
  border: solid 1px red;
}

@media (min-width: 525px) {
  
}

